# PaperLibrary

./: .gitignore  deploy.sh  manage.py  pyproject.toml
citenames/: cite.tex  citenames.py
paperlibrary/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
