[tool.poetry]
name = "paperlibrary"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.0"
ads = "^0.12.3"
djangoql = "^0.17.0"
alive-progress = "^3.1.2"
Wand = "^0.6.3"
psycopg2 = "^2.8.6"
django-debug-toolbar = "^4.0.0"
djangorestframework = {git = "https://github.com/encode/django-rest-framework.git"}
gunicorn = "^20.0.4"
setproctitle = "^1.2.2"
redis = "^4.2.2"
rq = "^1.10.1"
django-rq = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
